<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:orientation="vertical"
        tools:context=".QuizActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="?listPreferredItemPaddingLeft"
            android:layout_marginRight="?listPreferredItemPaddingRight"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/national_sport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/national_sport"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/answer_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/olympic_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:paddingTop="16dp"
                android:text="@string/country_olympic"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp">

                <RadioButton
                    android:id="@+id/radio_canada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/canada" />

                <RadioButton
                    android:id="@+id/radio_russia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/russia" />

                <RadioButton
                    android:id="@+id/radio_india"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/india" />

                <RadioButton
                    android:id="@+id/radio_usa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/usa" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:paddingTop="16dp"
                android:text="@string/olympic_games"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp">

                <CheckBox
                    android:id="@+id/checkbox_0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/athens" />

                <CheckBox
                    android:id="@+id/checkbox_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/lake_placid" />

                <CheckBox
                    android:id="@+id/checkbox_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/innsbruck" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:paddingTop="16dp"
                android:text="@string/many_players_polo"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/answer_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:paddingTop="16dp"
                android:text="@string/biathlon_event"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClickedTwo"
                    android:text="@string/correct" />

                <RadioButton
                    android:id="@+id/radio_selected_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClickedTwo"
                    android:text="@string/wrong" />

            </RadioGroup>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:background="@color/colorPrimary"
        android:elevation="32dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submitBotton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:onClick="onSubmitClicked"
            android:text="@string/submit_answers" />


    </LinearLayout>

</LinearLayout>

